Menu z-index fixed

--- a/assets/_menu.scss
+++ b/assets/_menu.scss
@@ -341,7 +341,7 @@
 
 /* M E N U   B A R S   A N I M A T I O N */
 #navigation:checked ~ .menu {
-    height: 100vh;
+    height: 0vh;
 }    
 #navigation:checked ~ .menu__container {
     z-index: -1;
