--- a/assets/_sub-pages.scss
+++ b/assets/_sub-pages.scss
@@ -147,10 +147,31 @@
         padding: 0 2rem;
 
         & .guestbox__picture {
-            flex: 0 0 20%;
-            
+            flex: 0 0 20%;            
             & img {
                 width: 100%;
+                border: 2px solid $yellow-main;
+                border-radius: $guestbox__foto--border-radius;
+            }
+        }
+    }
+}
+
+.guestbox__videos {
+    & .guestbox__videos--frame {
+        position: relative;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: .5rem;
+        width: 100%;
+        margin: 1.5rem 0;
+        padding: 0 2rem;
+
+         & .guestbox__video {
+            flex: 0 0 20%;            
+            & img {
+                width: 50%;
                 border: 2px solid $yellow-main;
                 border-radius: $guestbox__foto--border-radius;
             }
